--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
+    "query-string": "^6.13.5",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
     "react-loader-spinner": "^3.1.14",
     "react-redux": "^7.2.1",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "react-toastify": "^6.0.8",
+    "react-toastify": "^6.2.0",
     "reactstrap": "^8.5.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
